Dialogflow agent enables webhook only when Convo spec contains a middleware #3 .

--- a/generators/app/templates/agents/dialogflow/intent.json.ejs
+++ b/generators/app/templates/agents/dialogflow/intent.json.ejs
@@ -57,9 +57,12 @@
   ],
   "priority": 500000,
   <%
-  // TODO: decide webhook usage based on middlewares?
+    if (config.convoSpec.middlewares.openapi_cloudfunctions) {
   %>
+  "webhookUsed": true,
+  <% } else { %>
   "webhookUsed": false,
+  <% } %>
   "webhookForSlotFilling": false,
   "lastUpdate": 1534984467,
   "fallbackIntent": false,
