Fix webhook enablement to check for any middleware instead of specific openapi-cloudfunctions. #3

--- a/generators/app/templates/agents/dialogflow/intent.json.ejs
+++ b/generators/app/templates/agents/dialogflow/intent.json.ejs
@@ -57,7 +57,7 @@
   ],
   "priority": 500000,
   <%
-    if (config.convoSpec.middlewares.openapi_cloudfunctions) {
+    if (config.convoSpec.middlewares) {
   %>
   "webhookUsed": true,
   <% } else { %>
